# depreltest

./: .buildinfo  .gitmodules  CMakeLists.txt  Makefile  cmake_install.cmake  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py
.github/: install_ubuntu_dependencies.sh
.github/workflows/: pip-ubuntu-22.yml  pip-wheels.yml  pypi-windows.yml  ubuntu-18.yml  ubuntu22.yml  windows.yml
_build/: conf.py
_doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
depreltest/: __init__.py
doc/: CMakeLists.txt
pypiwheel/: CMakeLists.txt  setup.py.in
sphinx/: genindex.html  objects.inv  searchindex.js
src/: CMakeLists.txt  main.cpp  pch.h
